Fix alignment of footer text on photo posts with no content

--- a/src/assets/styles/components/item.css
+++ b/src/assets/styles/components/item.css
@@ -10,6 +10,10 @@
   position: relative;
 }
 
+.item--no-content {
+  align-items: start;
+}
+
 /* Header */
 .item__header {
   grid-area: header;
